tests/baselines/reference/dottedModuleName2.errors.txt
dottedModuleName2.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
dottedModuleName2.ts(1,10): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
dottedModuleName2.ts(9,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
dottedModuleName2.ts(9,27): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
dottedModuleName2.ts(22,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
dottedModuleName2.ts(22,10): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
dottedModuleName2.ts(22,12): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
dottedModuleName2.ts(32,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== dottedModuleName2.ts (8 errors) ====
    module A.B {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
             ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
     
      export var x = 1;
     
    }
     
     
     
    module AA { export module B {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
                              ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
     
      export var x = 1;
     
    } }
     
     
     
    var tmpOK = AA.B.x;
     
    var tmpError = A.B.x;
    
    
    module A.B.C
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
             ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
               ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
     
    {
     
        export var x = 1;
     
    }
     
     
     
    module M
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
     
    {
     
        import X1 = A;
     
        import X2 = A.B;
     
        import X3 = A.B.C;
     
    }
    